@@ -111,13 +111,13 @@
     {
       "name": "RL_CULL_DISTANCE_NEAR",
       "type": "DOUBLE",
-      "value": 0.01,
+      "value": 0.001,
       "description": "Default near cull distance"
     },
     {
       "name": "RL_CULL_DISTANCE_FAR",
       "type": "DOUBLE",
-      "value": 1000.0,
+      "value": 10000.0,
       "description": "Default far cull distance"
     },
     {
@@ -727,9 +727,9 @@
           "description": "Vertex indices (in case vertex data comes indexed) (6 indices per quad)"
         },
         {
-          "type": "#if defined(GRAPHICS_API_OPENGL_ES2)[5]",
-          "name": "vboId",
-          "description": "OpenGL Vertex Buffer Objects id (5 types of vertex data)"
+          "type": "#if defined(GRAPHICS_API_OPENGL_ES2)",
+          "name": "Matrix",
+          "description": ""
         },
         {
           "type": "unsigned short *",
@@ -738,8 +738,8 @@
         },
         {
           "type": "#endif",
-          "name": "colors",
-          "description": "Vertex colors (RGBA - 4 components per vertex) (shader-location = 3)"
+          "name": "rlVertexBuffer",
+          "description": ""
         },
         {
           "type": "unsigned int",
